tests/type-errors/no_read_global_shadow_var.arl
archetype no_read_global_shadow_var

entry exec () {
  effect {
    ()
  }
}

specification {
  variable myvar : int = 1
}
